# SmartAnalyzer

./: .gitignore  README.md  antigravity.json  ecosystem.config.cjs  hurkan_notes.md  migrate_options.js  package-lock.json  package.json  print_tags.py  start_python.sh  test_miner.js
.github/workflows/: deploy-metrixfolio.yml
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx
metrixfolio/: .firebaserc  apphosting.yaml  eslint.config.mjs  firebase.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
metrixfolio/actions/: categories.ts  currency.ts  debts.ts  family.ts  history.ts  ibkr.ts  manual-positions.ts  options.ts  positions.ts  transactions.ts  watchlist.ts  widget-actions.ts
metrixfolio/app/: layout.tsx
metrixfolio/context/: AuthProvider.tsx  CurrencyContext.tsx  ThemeProvider.tsx
metrixfolio/hooks/: useCurrencyConverter.ts  useDebts.ts  useIBKRSync.ts  usePortfolio.ts
metrixfolio/styles/: globals.css
metrixfolio/types/: Data.ts  debt.ts  family.ts  history.ts  options.ts  (+5 more)
python/: alembic.ini  main.py  pyproject.toml  test.py  test_ibkr.py  test_macro.py
python/database/: db.py  models.py
python/migrations/: env.py
python/migrations/versions/: 71f8e81c6375_add_watchlist_table.py  e7a4b9a7c3c5_add_joblog_table.py  efd770bf8991_initial_migration.py
python/services/: agent_analyst.py  analytics.py  ibkr.py  kraken.py  macro.py  pdf_generator.py  sync.py  telegram.py  yahoo.py
python/tests/: test_analytics.py
src/: index.js  test_scanner.js  test_weather.js
(+54 files in other folders)
